--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 		<section>
 			<article>
 			<!--ToDo Input Fields-->	
-			Input fields belongs here :)
-                Hier müssen die Auswahlfelder stehen...L
+		          <input type="text" size="30" maxlength="40" value="Sufjan"/>
+
+                  <input type="text" size="30" maxlength="40" value="unveränderlich" readonly="readonly"/>
+
+                  <input type="password" size="12" maxlength="40"/>
 
 			</article>
 
